--- a/index.html
+++ b/index.html
@@ -40,26 +40,22 @@
 
 var treeData = [
   {
-    "name": "Top Level",
+    "name": "Tumulo Nero",
     "parent": "null",
     "children": [
       {
-        "name": "Level 2: A",
-        "parent": "Top Level",
-        "children": [
-          {
-            "name": "Son of A",
-            "parent": "Level 2: A"
-          },
-          {
-            "name": "Daughter of A",
-            "parent": "Level 2: A"
-          }
-        ]
-      },
-      {
-        "name": "Level 2: B",
-        "parent": "Top Level"
+        "name": "Tana del Tumulo",
+        "parent": "Tumulo Nero",
+	"children": [
+		{
+			"name": "Accampamento Inox",
+			"parent": "Tana del tumulo"
+		},
+		{
+			"name": "Cripta dei dannati",
+			"parent": "Tumulo Nero"
+		}
+	]
       }
     ]
   }
