edit labels position

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         nodeEnter
           .append("text")
-          //   .attr('x', -35)
+          .attr('x', -35)
           .attr("y", -15)
           //   .attr("x", function (d) {
           //     return d.children || d._children ? -13 : 13;
