test no parent node

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
           parent: "null",
           state: States.DONE,
           children: [
+		  {
+			  name: "Test",
+			  parent: null,
+			  state: State.BLOCKED
+		  },
             {
               name: "Tana del Tumulo",
               parent: "Tumulo Nero",
