--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		  {
 			  name: "Test",
 			  parent: null,
-			  state: State.BLOCKED
+			  state: States.BLOCKED
 		  },
             {
               name: "Tana del Tumulo",
