aggiunta brughiera tossica

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                             },
                           ],
                         },
+			      {
+			  name: "Brughiera Tossica",
+			  parent: "Magazzino di Gloomhaven",
+			  state: States.TODO
+		  }
                         {
                           name: "Conca ghiacciata",
                           parent: "Magazzino di Gloomhaven",
