--- a/index.html
+++ b/index.html
@@ -46,6 +46,46 @@
   </head>
 
   <body>
+	  
+	  <fieldset>
+	  <legend>Legend</legend>
+
+	  <div class="color">
+	    <svg height="20" width="20">
+	  <circle cx="10" cy="10" r="8" stroke="green" stroke-width="3" fill="white" />
+	</svg>
+	    Completati
+	  </div>
+	  <div class="color">
+	    <svg height="20" width="20">
+	  <circle cx="10" cy="10" r="8" stroke="steelblue" stroke-width="3" fill="white" />
+	</svg>
+	    Fattibili
+	  </div>
+
+	  <div class="color">
+	    <svg height="20" width="20">
+	  <circle cx="10" cy="10" r="8" stroke="red" stroke-width="3" fill="white" />
+	</svg>
+	    Bloccati
+	  </div>
+
+	  <div class="color">
+	    <svg height="20" width="20">
+	  <circle cx="10" cy="10" r="8" stroke="Goldenrod" stroke-width="3" fill="white" />
+	</svg>
+	    Casuali
+	  </div>
+
+	  <div class="color">
+	    <svg height="20" width="20">
+	  <circle cx="10" cy="10" r="8" stroke="Whitesmoke" stroke-width="3" fill="white" />
+	</svg>
+	    Casuali completati
+	  </div>
+
+	</fieldset>
+	  
     <!-- load the d3.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
