--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Gloomtree</title>
 
     <style>
+	    .color {
+				display: inline-block;
+				margin: 0 10px
+			}
+	    
+	    
       .node {
         cursor: pointer;
       }
