--- a/index.html
+++ b/index.html
@@ -79,6 +79,34 @@
         </svg>
         Casuali completati
       </div>
+
+      <div class="color">
+        <svg height="20" width="20">
+          <circle
+            cx="10"
+            cy="10"
+            r="8"
+            stroke="Orange"
+            stroke-width="3"
+            fill="white"
+          />
+        </svg>
+        Sidequest 
+      </div>
+
+      <div class="color">
+        <svg height="20" width="20">
+          <circle
+            cx="10"
+            cy="10"
+            r="8"
+            stroke="Indianred"
+            stroke-width="3"
+            fill="white"
+          />
+        </svg>
+        Sidequest completati
+      </div>
     </fieldset>
 
     <div id="tooltip">
@@ -107,6 +135,8 @@
         TODO: "todo",
         EXTRA: "extra",
         EXTRA_DONE: "extra-done",
+        SIDEQUEST: "sidequest",
+        SIDEQUEST_DONE: "sidequest-done"
       };
     </script>
 
