--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         SPELLWEAVER: "Tessimagie",
         MINDTHIEF: "Ladro Mentale",
         SCOUNDREL: "Canaglia",
+        NIGHTSHROUD: "Sudario Notturno"
       };
 
       const States = {
