--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             cx="10"
             cy="10"
             r="8"
-            stroke="Goldenrod"
+            stroke="#773CBB"
             stroke-width="3"
             fill="white"
           />
